# Obsibooks

./: .gitattributes  .gitignore  CLAUDE.md  README.md  compress_images.py  obsibooks-gui.bat  obsibooks-gui.pyw  obsibooks.py  pepdf.py  pyproject.toml
.github/workflows/: release.yml
